fixed image paths

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>🎰 ( ͡° ͜ʖ ͡°) 🎰</h1>
     <div class="slots">
       <div class="slot" id="slot1">
-        <img src="images/test1.jpg" alt="symbol" id="slot1-img">
+        <img src="images/PGD.png" alt="symbol" id="slot1-img">
       </div>
       <div class="slot" id="slot2">
-        <img src="images/test2.jpg" alt="symbol" id="slot2-img">
+        <img src="images/PKR.png" alt="symbol" id="slot2-img">
       </div>
       <div class="slot" id="slot3">
-        <img src="images/test3.jpg" alt="symbol" id="slot3-img">
+        <img src="images/PLO.png" alt="symbol" id="slot3-img">
       </div>
     </div>
     <button onclick="spin()">STWÓRZMY HISTORIĘ</button>
