Random selection of images at page load

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Totalnie nieustawione losowanie NZD 2025</title>
   <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body onload="setup()">
   <div class="slot-machine">
     <h1>🎰 ( ͡° ͜ʖ ͡°) 🎰</h1>
     <div class="slots">
