disabling button + hit sound implemented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="images/PLO.png" alt="symbol" id="slot3-img">
       </div>
     </div>
-    <button onclick="spin()">STWÓRZMY HISTORIĘ</button>
+    <button onclick="spin()" id="start-button">STWÓRZMY HISTORIĘ</button>
     <audio id="win-sound" src="sounds/win-sound.mp3" preload="auto"></audio>
   </div>
 
