--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Totalnie nieustawione losowanie NZD 2025</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body onload="setup()">
   <div class="slot-machine">
